# SceLibcPosix

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.MD  gen-scelibcext.sh
SceLibcExt/: exports.yml
benchmarks/: IOBENCH.txt
crt/: CMakeLists.txt  crt0_common.h  crt0_main.c  crt0_module.c
include/: ctype.h  features.h
include/sys/: dirent.h  uio.h
src/: CMakeLists.txt  exports.yml  prx.c
src/conf/: fpathconf.c  pathconf.c  sysconf.c
src/ctype/: _ctype.c
src/dirent/: __dirent.h  alphasort.c  closedir.c  dirfd.c  fdopendir.c  opendir.c  readdir.c  readdir_r.c  rewinddir.c  scandir.c  seekdir.c  telldir.c
src/env/: __environ.c  clearenv.c  getenv.c  putenv.c  setenv.c  unsetenv.c
src/errno/: __errno.c
src/fnctl/: creat.c  fcntl.c  open.c
src/include/: features.h
src/include/psp2/kernel/: module_param.h
src/include/sys/: errno.h
src/internal/: fios2.h  setlocale.h  vitadescriptor.c  vitadescriptor.h  vitaerror.c  vitaerror.h  vitafs.c  vitafs.h  vitamem.c  vitamem.h  vitanet.c  vitanet.h  vitathread.c
src/locale/: locale.c  strfmon.c
src/misc/: basename.c  dirname.c  getentrophy.c  getpriority.c  getrlimit.c  getrusage.c  initgroups.c  itoa.c  newlibstub.c  realpath.c  setpriority.c  setrlimit.c
src/network/: accept.c  bind.c  connect.c  freeaddrinfo.c  gai_strerror.c  getaddrinfo.c  gethostbyaddr.c  gethostbyname.c  getpeername.c  getservbyname.c  getsockname.c  getsockopt.c  inet_addr.c  inet_aton.c  inet_legacy.c  inet_ntoa.c  inet_ntop.c  inet_pton.c  listen.c  recv.c  recvfrom.c  recvmsg.c  send.c  sendmsg.c  sendto.c  setsockopt.c  shutdown.c  socket.c
src/passwd/: getgrent.c
src/prng/: arc4rand.c  random.c
src/select/: poll.c  select.c
src/setjmp/: setjmp.S
src/signal/: kill.c  raise.c  signal.c
src/stat/: chmod.c  fchmod.c  fstat.c  fstatvfs.c  futimens.c  lstat.c  mkdir.c  stat.c  statvfs.c  utimensat.c
src/stdio/: fopen.c  fseek.c  ftell.c  pclose.c  popen.c
src/stdlib/: local.h
src/string/: mempcpy.c  stpcpy.c  strcasestr.c  strchrnul.c  strerror_r.c  strlcat.c  strlcpy.c  strnlen.c  wcscasecmp.c  wcslcat.c  wcslcpy.c  wcsncasecmp.c
src/time/: clock_getres.c  clock_gettime.c  clock_settime.c  gettimeofday.c  nanosleep.c  timer_create.c  timer_delete.c  timer_getoverrun.c  timer_gettime.c  timer_settime.c  utime.c
src/unistd/: access.c  chdir.c  chown.c  close.c  dup.c  dup2.c  fchdir.c  fchownat.c  fdatasync.c  fsync.c  ftruncate.c  getcwd.c  getegid.c  geteuid.c  getgid.c  getgroups.c  gethostname.c  getsid.c  getuid.c  isatty.c  link.c  lseek.c  nice.c  pipe.c  pread.c  preadv.c  pwrite.c  pwritev.c  read.c  readlink.c  readv.c  rmdir.c  setegid.c  seteuid.c  setgid.c  setgroups.c  setpgid.c  setpgrp.c  setregid.c  setreuid.c  (+8 more)
src/vita/: chroot.c  sethostname.c  utimes.c
test/: CMakeLists.txt  test.c
